// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ AccountCard ]] renders AccountCard for Admins 1`] = `
"<nuxt-link to=\\"/gh/deepsourcelabs\\" class=\\"flex w-full items-center gap-2 p-3 hover:bg-ink-300\\">
  <zavatar-stub image=\\"/static/dashboard/images/empty-avatar.svg\\" fallback-image=\\"test-image-dir/test-image-file.png\\" user-name=\\"deepsourcelabs\\"></zavatar-stub>
  <div class=\\"space-y-1.5\\">
    <div class=\\"flex items-center gap-x-2 leading-6\\">
      deepsourcelabs
      <ztag-stub bg-color=\\"ink-50\\" spacing=\\"px-2 h-4\\"><span class=\\"text-8px font-semibold tracking-wider text-vanilla-400\\">ADMIN</span></ztag-stub>
    </div>
    <div class=\\"flex items-center gap-4\\">
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"users\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">5 members</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"globe\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">10 active
          repositories</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Github</span>
      </div>
    </div>
  </div>
</nuxt-link>"
`;

exports[`[[ AccountCard ]] renders AccountCard for Contributors 1`] = `
"<nuxt-link to=\\"/gh/deepsourcelabs\\" class=\\"flex w-full items-center gap-2 p-3 hover:bg-ink-300\\">
  <zavatar-stub image=\\"/static/dashboard/images/empty-avatar.svg\\" fallback-image=\\"test-image-dir/test-image-file.png\\" user-name=\\"deepsourcelabs\\"></zavatar-stub>
  <div class=\\"space-y-1.5\\">
    <div class=\\"flex items-center gap-x-2 leading-6\\">
      deepsourcelabs
      <!---->
    </div>
    <div class=\\"flex items-center gap-4\\">
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"users\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">5 members</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"globe\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">10 active
          repositories</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Github</span>
      </div>
    </div>
  </div>
</nuxt-link>"
`;

exports[`[[ AccountCard ]] renders AccountCard for Owners 1`] = `
"<nuxt-link to=\\"/gh/deepsourcelabs\\" class=\\"flex w-full items-center gap-2 p-3 hover:bg-ink-300\\">
  <zavatar-stub image=\\"/static/dashboard/images/empty-avatar.svg\\" fallback-image=\\"test-image-dir/test-image-file.png\\" user-name=\\"deepsourcelabs\\"></zavatar-stub>
  <div class=\\"space-y-1.5\\">
    <div class=\\"flex items-center gap-x-2 leading-6\\">
      deepsourcelabs
      <ztag-stub bg-color=\\"robin-400\\" spacing=\\"px-2 h-4\\"><span class=\\"text-8px font-semibold tracking-wider text-ink-400\\">OWNER</span></ztag-stub>
    </div>
    <div class=\\"flex items-center gap-4\\">
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"users\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">5 members</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub icon=\\"globe\\" size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">10 active
          repositories</span>
      </div>
      <div class=\\"flex items-center gap-1\\">
        <zicon-stub size=\\"x-small\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Github</span>
      </div>
    </div>
  </div>
</nuxt-link>"
`;
